shaku_derive/tests/ui/derive_enum.stderr
error: Only structs are currently supported
 --> $DIR/derive_enum.rs:8:10
  |
8 | #[derive(Component)]
  |          ^^^^^^^^^
  |
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: Only structs are currently supported
  --> $DIR/derive_enum.rs:13:10
   |
13 | #[derive(Provider)]
   |          ^^^^^^^^
   |
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
